# agent-patterns

./: .gitignore  .mcp.json  DIRECT_SKILL_TEST.md  LIVE_TEST_EXAMPLE.md  PATTERN6_IMPLEMENTATION_SUMMARY.md  README.md  SKILL_EXECUTION_PROOF.md  interactive_pattern6_demo.py  skill_executor.py
.claude/skills/ecommerce-orchestration/: SKILL.md
.claude/skills/grammar-checker/: SKILL.md  run.py
.claude/skills/readability-scorer/: SKILL.md  run.py
.claude/skills/sentiment-analyzer/: SKILL.md  run.py
.claude/skills/seo-optimizer/: SKILL.md  run.py
.claude/skills/task-organizer/: SKILL.md
.claude/skills/text-analyzer/: SKILL.md  run.py
.github/skills/ecommerce-orchestration/: SKILL.md
.github/skills/grammar-checker/: SKILL.md
.github/skills/readability-scorer/: SKILL.md
.github/skills/sentiment-analyzer/: SKILL.md
.github/skills/seo-optimizer/: SKILL.md
.github/skills/task-organizer/: SKILL.md
business-rules-mcp/: pyproject.toml
business-rules-mcp/src/business_rules_mcp/: __init__.py  rules_engine.py  server.py
docs/: EXAMPLES.md  EXTENDING.md  MCP_SERVER.md  PATTERNS_CATALOG.md  PATTERNS_CATALOG_ja.md  PATTERNS_REFERENCE.md  PATTERN_2_IMPLEMENTATION.md  PATTERN_2_TEST_SCENARIOS.md  Pattern6_HierarchicalSkills_ReadabilityScorerer_HINT.md  SDK_USAGE.md  SETUP.md  SKILL_GUIDE.md
mcp-server/: pyproject.toml
sdk-examples/python/: basic_mcp.py  requirements.txt  with_skill.py
sdk-examples/typescript/: basic_mcp.ts  package.json  with_skill.ts
tests/: PATTERN6_TEST_RESULTS.md  pattern6_test.md  test_pattern6.py
(+3 files in other folders)
