[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-rules-mcp"
version = "1.0.0"
description = "E-commerce Business Rules MCP Server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Agent Patterns", email = "dev@agentpatterns.local"}]

dependencies = [
    "mcp>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
business-rules-mcp = "business_rules_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/business_rules_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
